--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=bookstore
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.path=/h2-console
+
+spring.data.rest.base-path=/api
